Mirroring changes in testnet

--- a/mainnet/Dockerfile
+++ b/mainnet/Dockerfile
@@ -20,8 +20,8 @@ USER safeuser
 
 RUN mkdir blockchain
 
-# Install Redis. TODO: Make this a separate container.
-
+COPY bin/Fulcrum Fulcrum
+COPY testnet.conf testnet.conf
 
 CMD ["./Fulcrum", "mainnet.conf"]
 
