Got testnet working with self-signed cert

--- a/mainnet/mainnet.conf
+++ b/mainnet/mainnet.conf
@@ -45,10 +45,10 @@ key = /home/safeuser/privkey.pem
 hostname = fulcrum-main.bchjs.cash
 
 # Public TCP port - 'public_tcp_port' - DEFAULT: The first 'tcp' port configured
-#public_tcp_port = 50001
+public_tcp_port = 50001
 
 # Public SSL port - 'public_ssl_port' - DEFAULT: The first 'ssl' port configured
-#public_ssl_port = 50002
+public_ssl_port = 50002
 
 # Admin RPC bind - 'admin' - DEFAULT: None -- *REQUIRED* to use "FulcrumAdmin"
 admin = 8000  # <-- 1.2.3.4:8000 notation also accepted here
