--- a/testnet/testnet.conf
+++ b/testnet/testnet.conf
@@ -30,13 +30,13 @@ tcp = 0.0.0.0:50001
 # *RECOMMENDED* - SSL bind - 'ssl' - DEFAULT: Noting, Specifies the SSL
 # interface:port to bind to. The presence of this variable requires key= and
 # cert= both be specified.
-#ssl = 0.0.0.0:50002
+ssl = 0.0.0.0:50002
 
 # SSL cert. - 'cert' - DEFAULT: None (required for SSL) (PEM, self-signed ok)
-#cert = /path/to/server.crt
+cert = /home/safeuser/server.crt
 
 # SSL private key - 'key' - DEFAULT: None (required for SSL) (RSA in PEM format)
-#key = /path/to/server.key
+key = /home/safeuser/server.key
 
 # Public hostname - 'hostname' - It is highly recommended you set this correctly
 # if you are interested in having your server peer with other servers --
@@ -45,10 +45,10 @@ tcp = 0.0.0.0:50001
 hostname = fulcrum-testnet.decatur.hopto.org
 
 # Public TCP port - 'public_tcp_port' - DEFAULT: The first 'tcp' port configured
-#public_tcp_port = 50001
+public_tcp_port = 50001
 
 # Public SSL port - 'public_ssl_port' - DEFAULT: The first 'ssl' port configured
-#public_ssl_port = 50002
+public_ssl_port = 50002
 
 # Admin RPC bind - 'admin' - DEFAULT: None -- *REQUIRED* to use "FulcrumAdmin"
 admin = 8000  # <-- 1.2.3.4:8000 notation also accepted here
