--- a/mainnet/docker-compose.yml
+++ b/mainnet/docker-compose.yml
@@ -3,8 +3,8 @@ fulcrum-mainnet:
   dockerfile: Dockerfile
   container_name: fulcrum-mainnet
   volumes:
-    - ./blockchain:/home/safeuser/blockchain
+    - /mnt/usb/fulcrum/mainnet-blockchain:/home/safeuser/blockchain
   ports:
     - 50001:50001
-    - 60002:60002
+    - 50002:50002
     
