--- a/testnet/docker-compose.yml
+++ b/testnet/docker-compose.yml
@@ -3,7 +3,7 @@ fulcrum-testnet:
   dockerfile: Dockerfile
   container_name: fulcrum-testnet
   volumes:
-    - /mnt/data/bitcoin.com/blockchain-data/fulcrum/testnet/blockchain:/home/safeuser/blockchain
+    - /mnt/usb/fulcrum/testnet-blockchain:/home/safeuser/blockchain
   ports:
-    - 50001:50001
-    - 50002:50002
+    - 60001:50001
+    - 60002:50002
