--- a/mainnet/mainnet.conf
+++ b/mainnet/mainnet.conf
@@ -33,10 +33,12 @@ tcp = 0.0.0.0:50001
 ssl = 0.0.0.0:50002
 
 # SSL cert. - 'cert' - DEFAULT: None (required for SSL) (PEM, self-signed ok)
-cert = /home/safeuser/fullchain.pem
+#cert = /home/safeuser/fullchain.pem
+cert = /home/safeuser/server.crt
 
 # SSL private key - 'key' - DEFAULT: None (required for SSL) (RSA in PEM format)
-key = /home/safeuser/privkey.pem
+#key = /home/safeuser/privkey.pem
+key = /home/safeuser/server.key
 
 # Public hostname - 'hostname' - It is highly recommended you set this correctly
 # if you are interested in having your server peer with other servers --
