--- a/mainnet/mainnet.conf
+++ b/mainnet/mainnet.conf
@@ -44,7 +44,7 @@ key = /home/safeuser/server.key
 # if you are interested in having your server peer with other servers --
 # otherwise other servers may not peer with you if your hostname is missing or
 # does not resolve to your public IP address.
-hostname = fulcrum-main.bchjs.cash
+hostname = troutsblog.com
 
 # Public TCP port - 'public_tcp_port' - DEFAULT: The first 'tcp' port configured
 public_tcp_port = 50001
