--- a/testnet/Dockerfile
+++ b/testnet/Dockerfile
@@ -1,3 +1,4 @@
+# Start with a pre-configured Ubuntu 18.04 image.
 FROM christroutner/ct-base-ubuntu
 MAINTAINER Chris Troutner <chris.troutner@gmail.com>
 
@@ -6,13 +7,17 @@ RUN apt-get update -y
 #Set the working directory to be the home directory
 WORKDIR /home/safeuser
 
+# Copy the Fulcrum binary and config file.
 COPY bin/Fulcrum Fulcrum
 COPY testnet.conf testnet.conf
-COPY certs/fullchain.pem fullchain.pem
-COPY certs/privkey.pem privkey.pem
-#COPY certs/server.crt server.crt
-#COPY certs/server.key server.key
 
+# Copy SSL certificates
+#COPY certs/fullchain.pem fullchain.pem
+#COPY certs/privkey.pem privkey.pem
+COPY certs/server.crt server.crt
+COPY certs/server.key server.key
+
+# Ensure all files are owned by the safeuser user.
 RUN chown -R safeuser *
 
 # Switch to user account.
@@ -20,14 +25,12 @@ USER safeuser
 # Prep 'sudo' commands.
 #RUN echo 'abcd8765' | sudo -S pwd
 
+# Used to hold the Fulcrum database.
 RUN mkdir blockchain
 
-# Install Redis. TODO: Make this a separate container.
-
-COPY bin/Fulcrum Fulcrum
-COPY testnet.conf testnet.conf
-
+# Start Fulcrum server.
 CMD ["./Fulcrum", "testnet.conf"]
 
+# Used for debugging.
 #COPY bin/dummyapp.js dummyapp.js
 #CMD ["node", "dummyapp.js"]
