--- a/mainnet/Dockerfile
+++ b/mainnet/Dockerfile
@@ -1,21 +1,24 @@
+# Start with a pre-configured Ubuntu 18.04 image.
 FROM christroutner/ct-base-ubuntu
 MAINTAINER Chris Troutner <chris.troutner@gmail.com>
 
+# Update package repositories.
 RUN apt-get update -y
 
 #Set the working directory to be the home directory
 WORKDIR /home/safeuser
 
+# Copy the Fulcrum binary and config file.
 COPY bin/Fulcrum Fulcrum
 COPY mainnet.conf mainnet.conf
 
-# Copy certs
+# Copy SSL certificates
 #COPY certs/fullchain.pem fullchain.pem
 #COPY certs/privkey.pem privkey.pem
 COPY certs/server.crt server.crt
-COPY certs/server.csr server.csr
 COPY certs/server.key server.key
 
+# Ensure all files are owned by the safeuser user.
 RUN chown -R safeuser *
 
 # Switch to user account.
@@ -23,12 +26,12 @@ USER safeuser
 # Prep 'sudo' commands.
 #RUN echo 'abcd8765' | sudo -S pwd
 
+# Used to hold the Fulcrum database.
 RUN mkdir blockchain
 
-COPY bin/Fulcrum Fulcrum
-COPY mainnet.conf mainnet.conf
+# Start Fulcrum server.
+CMD ["./Fulcrum", "mainnet.conf"]
 
-#CMD ["./Fulcrum", "mainnet.conf"]
-
-COPY bin/dummyapp.js dummyapp.js
-CMD ["node", "dummyapp.js"]
+# Used for debugging.
+#COPY bin/dummyapp.js dummyapp.js
+#CMD ["node", "dummyapp.js"]
